# Pokidex

./: Cargo.toml  README.md
.github/workflows/: rust.yml  ubuntu.yaml
src/: actions.rs  configs.rs  events.rs  file_handler.rs  lib.rs  main.rs  widget.rs
