[package]
name = "pokidex-tui"
version = "0.1.0"
edition = "2024"

[dependencies]

crossterm = { version = "0.19.0", features = ['serde'] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
serde = { version = "1.0.123", features = ["derive"] }
lazy_static = "1.4.0"
directories-next = "2.0.0"
serde_json = "1.0.64"
